decorater cache examples

--- a/ddp_1/logger-stacked-decorator.ipynb
+++ b/ddp_1/logger-stacked-decorator.ipynb
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "outputs": [
     {
      "name": "stdout",
@@ -231,9 +231,18 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-17T12:36:04.736595700Z",
-     "start_time": "2023-07-17T12:36:04.689860800Z"
+     "end_time": "2023-07-19T07:24:51.326189Z",
+     "start_time": "2023-07-19T07:24:51.291393600Z"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
